<resources>
    <string name="app_name">Calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="divine_button">/</string>
    <string name="multiply_button">x</string>
    <string name="minus_button">-</string>
    <string name="null_button" />
    <string name="clear_button">C</string>
    <string name="plus_button">+</string>
    <string name="equal_button">=</string>
</resources>
